--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-two",
+  "name": "paybyphone_demo",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.3.15",
+    "angular": "1.2.15",
     "json3": "~3.2.6",
     "bootstrap": "~3.3.4",
     "angular-route": "1.2.15"
